--- a/Jawa/kuliner-jawa/soto-kudus.html
+++ b/Jawa/kuliner-jawa/soto-kudus.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Soto Kudus</title>
+  <link rel="shortcut icon" href="/logoo.png" type="image/png" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
